--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <script>
     var random = Math.ceil(Math.random() * 100);
 
-    var name = prompt("Hey there color master, \nWhat should I call you?");
+    var name = prompt("Hey there color master, \nWhat's your name?");
       alert("Okay " + name + "\nCool name, huh");
     
     var play = confirm("Can you guess if I'm thinking Red or Blue?");
