--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     
     var play = confirm("Can you guess if I'm thinking Red or Blue?");
     if (play) {
-      var guess = confirm("Okay, count 1 to 3 \nThen click okay if you're ready to read my mind \n1, 2, 3...what's your guess? ");
+      var guess = confirm("Okay, count 1 to 3 \nThen click okay if you're ready to read my mind \n1, 2, 3...Red or Blue? ");
       if (guess) {
         // guessing
         var result = random > 50 ? "I'm thinking Red" : "I'm thinking Blue";
