--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     }
 
 
-    alert("Uhmm, did you get it? \nsince I can't actually read minds and my programmer is such a noob... that's all fow now");
+    alert("Uhmm, did you get it? \nSince I can't actually read minds... \nand my programmer is such a noob... that's all for now");
     alert("Thanks anyway! \nReload again to guess")
 
   </script>
